# WorldCup22DiscordBot

./: .replit  backup_db.py  bet_model.py  bet_type.py  bid.py  bid_status.py  bid_table.py  bot.py  calculator.py  commands.py  config.py  cron_jobs.py  custom_script.py  custom_script_read_only.py  daily_bet.py  database.py  events_api.py  graph_maker.py  hotfix_arg_ned.py  main.py  match.py  match_table.py  migration.py  offer.py  old-main.py  pyproject.toml  record.py  replit.nix  result.py  streak.py  test.py  updator.py  user.py  user_table.py  utilities.py  verification.py  verification_table.py
backup/2022-11-20-15-36-31/: match_table.json
backup/2022-11-20-15-42/: match_table.json  user_table.json
backup/2022-11-20-18-31/: match_table.json  user_table.json
backup/2022-11-20-21-31/: match_table.json  user_table.json
backup/2022-11-21-00-30/: match_table.json
backup/2022-11-21-12-30/: match_table.json  user_table.json
backup/2022-11-21-15-30/: user_table.json
backup/2022-11-21-18-30/: user_table.json
backup/2022-11-21-21-30/: user_table.json
backup/2022-11-22-00-30/: match_table.json  user_table.json
backup/2022-11-22-04-30/: match_table.json  user_table.json
backup/2022-11-22-19-30/: match_table.json  user_table.json
backup/2022-11-22-22-30/: match_table.json  user_table.json
backup/2022-11-23-01-30/: match_table.json  user_table.json
backup/2022-11-23-04-30/: match_table.json  user_table.json
backup/2022-11-23-19-30/: match_table.json  user_table.json
backup/2022-11-23-22-30/: match_table.json  user_table.json
(+126 files in other folders)
