[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10.11"
discord-py = "^2.3.2"
pytz = "^2024.1"
replit = "^3.6.3"
requests = "^2.31.0"
aenum = "^3.1.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
